--- a/src/components/stats.module.css
+++ b/src/components/stats.module.css
@@ -45,7 +45,7 @@
       font-size: 14px;
       line-height: 168%;
       text-align: center;
-      color: var(--colors-base-white);
+      color: var(--colors-base-dark);
     }
   }
 }
